--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h1>Marvels of Architecture</h1>
+
+        <div class="imageContainer">
+            <img src="https://images.unsplash.com/photo-1505843513577-22bb7d21e455" alt="Architecture Main">
+        </div>
+
+        <table border="1">
+            <tr>
+                <td class="imageColumn">
+                    <img src="https://images.unsplash.com/photo-1529429611270-8761a1b47f6d" alt="Building 1">
+                </td>
+                <td class="textColumn">
+                    <p>The Colosseum, an oval amphitheatre in the centre of the city of Rome, is the largest ancient amphitheatre ever built, and is still the largest standing amphitheatre in the world today.</p>
+                </td>
+                <td class="imageColumn">
+                    <img src="https://images.unsplash.com/photo-1583275341564-6e1f7ad2dbd2" alt="Building 2">
+                </td>
+            </tr>
+            <tr>
+                <td class="imageColumn">
+                    <img src="https://images.unsplash.com/photo-1599058917212-2dc07866b9b2" alt="Building 3">
+                </td>
+                <td class="textColumn">
+                    <p>The Burj Khalifa is a skyscraper in Dubai, United Arab Emirates, known for being the tallest structure and building in the world since its topping out in 2009.</p>
+                </td>
+                <td class="imageColumn">
+                    <img src="https://images.unsplash.com/photo-1549921296-3a9627f424f4" alt="Building 4">
+                </td>
+            </tr>
+        </table>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
